--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chec/commerce.js": "2.2.0",
     "@hookform/error-message": "0.0.5",
+    "@sendgrid/mail": "^7.4.7",
     "@stripe/react-stripe-js": "1.1.2",
     "@stripe/stripe-js": "1.11.0",
     "autoprefixer": "10.0.4",
@@ -18,6 +19,7 @@
     "framer-motion": "2.9.4",
     "next": "10.0.2",
     "next-google-fonts": "1.2.1",
+    "pdf-lib": "^1.16.0",
     "postcss": "8.1.14",
     "react": "17.0.1",
     "react-dom": "17.0.1",
