--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "chopchop",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "next",
     "build": "next build",
