netlify-lambda pkg

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.0.4",
     "classcat": "4.1.0",
     "framer-motion": "2.9.4",
+    "netlify-lambda": "^2.0.15",
     "next": "10.0.2",
     "next-google-fonts": "1.2.1",
     "node-fetch": "^3.0.0",
