--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "export": "next build && next export"
   },
   "dependencies": {
-    "@chec/commerce.js": "2.2.0",
+    "@chec/commerce.js": "^2.8.0",
     "@hookform/error-message": "0.0.5",
     "@sendgrid/mail": "^7.4.7",
     "@stripe/react-stripe-js": "1.1.2",
