--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@chec/seeder": "^1.1.1",
+    "@netlify/plugin-nextjs": "^4.2.6",
     "babel-plugin-inline-react-svg": "2.0.1",
     "tailwindcss": "3.0.11"
   }
