--- a/package.json
+++ b/package.json
@@ -14,15 +14,36 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@contentful/rich-text-from-markdown": "^15.13.1",
+    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@hookform/error-message": "^2.0.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
     "@popperjs/core": "^2.11.2",
     "@tabler/icons": "^1.53.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "bulma": "^0.9.4",
+    "contentful": "^9.1.29",
+    "framer-motion": "^6.3.3",
     "gray-matter": "^4.0.3",
+    "gsap": "npm:@gsap/member@^3.10.4",
+    "little-state-machine": "^4.4.1",
+    "little-state-machine-devtools": "^2.0.2",
     "marked": "^4.0.12",
     "next": "12.1.0",
+    "prange": "^0.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.0"
+    "react-hook-form": "^7.34.0",
+    "react-router-dom": "^6.3.0",
+    "react-toastify": "^8.2.0",
+    "regex": "^0.1.1",
+    "sass": "^1.49.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.8.0",
