--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.34.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
     "regex": "^0.1.1",
