--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
     "@popperjs/core": "^2.11.2",
+    "@sendgrid/mail": "^7.7.0",
     "@tabler/icons": "^1.53.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
@@ -35,9 +36,11 @@
     "little-state-machine-devtools": "^2.0.2",
     "marked": "^4.0.12",
     "next": "12.1.0",
+    "node-fetch": "^3.2.10",
     "prange": "^0.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.34.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.3.0",
