--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@sendgrid/mail": "^7.7.0",
     "@tabler/icons": "^1.53.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.2",
     "bulma": "^0.9.4",
     "contentful": "^9.1.29",
     "framer-motion": "^6.3.3",
@@ -39,6 +39,7 @@
     "node-fetch": "^3.2.10",
     "prange": "^0.2.3",
     "react": "17.0.2",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.34.0",
@@ -46,7 +47,7 @@
     "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
     "regex": "^0.1.1",
-    "sass": "^1.49.0",
+    "sass": "^1.56.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
